<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>gsrs-spring-boot</artifactId>
        <groupId>gov.nih.ncats</groupId>
        <version>3.0.3-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>gsrs-spring-boot-autoconfigure</artifactId>

    <properties>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/gsrs.starter.version.txt</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>**/gsrs.starter.version.txt</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-core</artifactId>
            <version>${gsrs.version}</version>
        </dependency>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-scheduled-tasks</artifactId>
            <version>${gsrs.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-spring-legacy-sequence-indexer</artifactId>
            <version>${gsrs.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-spring-legacy-cache</artifactId>
            <version>${gsrs.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-spring-legacy-indexer</artifactId>
            <version>${gsrs.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-spring-legacy-structure-indexer</artifactId>
            <version>${gsrs.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-core-entities</artifactId>
            <version>${gsrs.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>ncats-common</artifactId>
            <version>0.3.6-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.zeldigas</groupId>
            <artifactId>spring-hocon-property-source</artifactId>
            <version>0.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-hateoas</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.flipkart.zjsonpatch</groupId>
            <artifactId>zjsonpatch</artifactId>
            <version>0.4.11</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
	<dependency>
	    <groupId>org.apache.tika</groupId>
	    <artifactId>tika-core</artifactId>
	    <version>1.22</version>
	</dependency>
    </dependencies>

</project>
